# agentic_python_code_analyser

./: .gitignore  crew_analyser.py  pyproject.toml
